# robot

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: runpod.md
scripts/: check_deps.py  runpod_train.sh  setup_runpod.sh  train.py
src/data/: dataset.py
src/evaluation/: evaluator.py
